<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.10</version>
        <relativePath/>
    </parent>

    <groupId>community.flock.wirespec.example.maven</groupId>
    <artifactId>maven-spring-convert</artifactId>
    <version>0.0.0-SNAPSHOT</version>

    <properties>
        <java.version>21</java.version>
        <kotlin.version>2.0.20</kotlin.version>
        <sortpom-maven-plugin.version>3.2.0</sortpom-maven-plugin.version>
        <wirespec.version>0.0.0-SNAPSHOT</wirespec.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>community.flock.wirespec</groupId>
                <artifactId>bom</artifactId>
                <version>${wirespec.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>community.flock.wirespec.integration</groupId>
                <artifactId>wirespec-jvm</artifactId>
                <version>${wirespec.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-reflect</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-stdlib</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlinx</groupId>
            <artifactId>kotlinx-coroutines-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlinx</groupId>
            <artifactId>kotlinx-coroutines-reactor</artifactId>
        </dependency>
        <dependency>
            <groupId>community.flock.wirespec.integration</groupId>
            <artifactId>wirespec-jvm</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>community.flock.wirespec.plugin.maven</groupId>
                    <artifactId>wirespec-maven-plugin</artifactId>
                    <version>${wirespec.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.jetbrains.kotlin</groupId>
                    <artifactId>kotlin-maven-plugin</artifactId>
                    <configuration>
                        <args>
                            <arg>-Xjsr305=strict</arg>
                        </args>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <compilerArgs>--enable-preview</compilerArgs>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>com.github.ekryd.sortpom</groupId>
                <artifactId>sortpom-maven-plugin</artifactId>
                <version>${sortpom-maven-plugin.version}</version>
                <configuration>
                    <predefinedSortOrder>custom_1</predefinedSortOrder>
                    <lineSeparator>\n</lineSeparator>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <sortProperties>true</sortProperties>
                    <sortDependencies>scope</sortDependencies>
                    <nrOfIndentSpace>4</nrOfIndentSpace>
                    <expandEmptyElements>false</expandEmptyElements>
                    <createBackupFile>false</createBackupFile>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>sort</goal>
                        </goals>
                        <phase>verify</phase>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-maven-plugin</artifactId>
                <configuration>
                    <args>
                        <arg>-Xjsr305=strict</arg>
                    </args>
                    <compilerPlugins>
                        <plugin>spring</plugin>
                    </compilerPlugins>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.jetbrains.kotlin</groupId>
                        <artifactId>kotlin-maven-allopen</artifactId>
                        <version>${kotlin.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>community.flock.wirespec.plugin.maven</groupId>
                <artifactId>wirespec-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>openapi-v2-to-kotlin</id>
                        <goals>
                            <goal>convert</goal>
                        </goals>
                        <configuration>
                            <input>${project.basedir}/src/main/openapi/petstorev2.json</input>
                            <output>${project.build.directory}/generated-sources</output>
                            <packageName>community.flock.wirespec.generated.kotlin.v2</packageName>
                            <format>OpenAPIV2</format>
                            <languages>
                                <language>Kotlin</language>
                            </languages>
                            <shared>true</shared>
                        </configuration>
                    </execution>
                    <execution>
                        <id>openapi-v3-to-kotlin</id>
                        <goals>
                            <goal>convert</goal>
                        </goals>
                        <configuration>
                            <input>${project.basedir}/src/main/openapi/petstorev3.json</input>
                            <output>${project.build.directory}/generated-sources</output>
                            <packageName>community.flock.wirespec.generated.kotlin.v3</packageName>
                            <format>OpenAPIV3</format>
                            <languages>
                                <language>Kotlin</language>
                            </languages>
                            <shared>false</shared>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <id>add-source</id>
                        <goals>
                            <goal>add-source</goal>
                        </goals>
                        <phase>generate-sources</phase>
                        <configuration>
                            <sources>
                                <source>${project.build.directory}/generated-sources</source>
                            </sources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
